<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">随护助手</string>
    <string name="action_settings">设置</string>
    <string name="login_username_hint">请输入手机号码</string>
    <string name="login_password_edt">请输入密码</string>
    <string name="login_login_btn">登录</string>
    <string name="login_register_btn">注册</string>
    <string name="login_succeeded">登录成功</string>
    <string name="login_find_password">忘记密码 ?</string>
    <string name="login_code">验证码登录</string>
    <string name="login_password">密码登录</string>
    <string name="login_title">"Hi,健康大使-医生版欢迎您"</string>
    <string name="jwotch_remind_list">腕表提醒列表</string>
    <string name="add_newmind">新增提醒</string>
    <string name="add_newmind_txt">腕表提醒信息</string>
    <string name="remind_theme">请输入腕表提醒主题</string>
    <string name="jwotch_remind_theme">主题</string>
    <string name="time">时间</string>
    <string name="jwotch_remind_cycle">重复周期</string>
    <string name="cycle_one">一次</string>
    <string name="cycle_day">每天</string>
    <string name="cycle_month">每月</string>
    <string name="cycle_self">自定义</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期日</string>
    <string name="define">确定</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">截止时间</string>
    <string name="left_right_arr">左右箭头</string>
    <string name="select_date">选择日期</string>
    <string name="chart">趋势图</string>
    <string name="date">日期</string>
    <string name="pre_month">上月</string>
    <string name="next_month">下月</string>
    <string name="pre_week">上周</string>
    <string name="next_week">下周</string>
    <string name="start">开始</string>
    <string name="end">截止</string>
    <string name="basic_info">基本信息</string>
    <string name="health_info">健康信息</string>
    <string name="contact_info">通讯信息</string>
    <string name="my_integration">我的积分</string>
    <string name="change_account">切换账号</string>
    <string name="system_set">系统设置</string>
    <string name="doctor_set_photo">拍照上传</string>
    <string name="doctor_set_img">图库上传</string>
    <string name="SD_warn">SD卡不可用！</string>
    <string name="health_report">健康报告</string>
    <string name="update_phone">更换密保手机</string>
    <string name="input_phone">请输入您的手机号码</string>
    <string name="bind">绑定</string>
    <string name="myshare">分享</string>
    <string name="big">大</string>
    <string name="small">小</string>
    <string name="bp">血压</string>
    <string name="age">年龄</string>
    <string name="bp_cur">脉搏曲线</string>
    <string name="normal_up">正常上限</string>
    <string name="normal_down">正常下限</string>
    <string name="ana_fail">解析失败</string>
    <string name="cal_ana_fail">由于网络或其他原因，未获得身高体重参数，卡路里数据解析失败。</string>
    <string name="ihhr">爱普瑞康健康大使健康报告</string>
    <string name="hphr">健康大使个人健康报告</string>
    <string name="iparecare">爱普瑞康</string>
    <string name="bp_ana">血压数据分析：</string>
    <string name="pr_ana">脉搏数据分析：</string>
    <string name="cal_ana">卡路里数据分析：</string>
    <string name="hr_1">健康大使个人健康检测初步报告</string>
    <string name="hr_2">健康检测结果-腕宝检测数据</string>
    <string name="hr_3">健康检测结果-建议与分析</string>
    <string name="hr_4">生活方式相关建议与分析</string>
    <string name="hr_5">数据监测建议与分析</string>
    <string name="hr_6">(注：此建议由系统智能生成，如有与客服人员发送的报告不符，请参照客服人员发送的报告。)</string>
    <string name="bp_unit">(mmHg)</string>
    <string name="pr_unit">(次/分钟)</string>
    <string name="minute">分钟</string>
    <string name="cal_unit">(kcal)</string>
    <string name="step">步</string>
    <string name="state">state</string>
    <string name="contacts">联系人</string>
    <string name="relatives">亲人号码</string>
    <string name="emey_contacts">紧急联系人</string>
    <string name="add_newcontacts">联系人信息</string>
    <string name="add_relatives">亲人号码信息</string>
    <string name="add_relatives_position">位置</string>
    <string name="add_relatives_number">请输入数字1,2,3,4</string>
    <string name="add_emey_relatives">紧急联系人信息</string>
    <string name="relations">关系</string>
    <string name="tools_location">求救定位</string>
    <string name="help_location">求救定位</string>
    <string name="locate">定位</string>
    <string name="locating">正在查询</string>
    <string name="located">查询结束</string>
    <string name="location_record">定位记录</string>
    <string name="already_refresh">已刷新</string>
    <string name="address_data_req_fail">地址数据获取失败</string>
    <string name="map_exception">地图发生异常</string>
    <string name="general_location">一般定位</string>
    <string name="red_location">紧急呼叫定位</string>
    <string name="green_location">健康咨询定位</string>
    <string name="type">类型</string>
    <string name="here">这里</string>
    <string name="location_info">位置信息</string>
    <string name="sm_plan_set">运动监测计划设置</string>
    <string name="sm_status">状态</string>
    <string name="sm_status_activate">启动</string>
    <string name="sm_status_stop">停止</string>
    <string name="sm_cycle">重复类型</string>
    <string name="sm_plan">运动监测计划</string>
    <string name="sm_record">运动记录</string>
    <string name="sport_monitor">运动监测</string>
    <string name="activity_monitor">活动监测</string>
    <string name="sport_type">运动类型</string>
    <string name="add_new_plan">运动计划</string>
    <string name="ma_ll_data_exception">经纬度数据异常</string>
    <string name="ma_trail_map">我的运动轨迹</string>
    <string name="sm_time_hint1">开始时间应早于结束时间！</string>
    <string name="sm_time_hint2">请确保时间段没有冲突!</string>
    <string name="sm_time_hint3">计划执行时间不合理!</string>
    <string name="measure">正在测量</string>
    <string name="temperature_curve">温度曲线</string>
    <string name="curve_temp">温度贴片曲线图</string>
    <string name="curve_line">波动曲线</string>
    <string name="curve_size">波动程度</string>
    <string name="sport_jwotch_set">运动设置</string>
    <string name="sport_jwotch_set_list">运动监测计划列表</string>
    <string name="sport_jwotch_planset">运动监测计划设置</string>
    <string name="sport_jwotch_list_starttime">开始时间</string>
    <string name="sport_jwotch_list_endtime">截止时间</string>
    <string name="sport_jwotch_activity_monitor">活动监测</string>
    <string name="sport_jwotch_sport_monitor">运动监测</string>
    <string name="sport_jwotch_sport_consume">运动消耗</string>
    <string name="sport_jwotch_sport_time">运动时间</string>
    <string name="sport_jwotch_sport_distance">运动里程</string>
    <string name="sport_jwotch_sport_record_share">保持运动，继续加油呦!</string>
    <string name="sm_record_hint">注:运动监测是直接在表上进行测试的运动轨迹，卡路里和步数等;活动监测是在APP设置后,同步到腕表上进行测试的运动轨迹,卡路里和步数等。</string>
    <string name="week_data">周数据</string>
    <string name="month_data">月数据</string>
    <string name="custom_data">自定义数据</string>
    <string name="ps_measure_trend">收缩压测量趋势图</string>
    <string name="ps_measure">收缩压测量</string>
    <string name="pd_measure_trend">舒张压测量趋势图</string>
    <string name="pd_measure">舒张压测量</string>
    <string name="pr_measure">脉搏测量趋势图</string>
    <string name="pr_measure_trend">脉搏测量</string>
    <string name="cal_measure">卡路里测量趋势图</string>
    <string name="cal_measure_trend">卡路里测量</string>
    <string name="self_defined">自定义</string>
    <string name="test_time">测量时间</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="the_date_no_data">这个日期没有测试数据</string>
    <string name="pr_data_ana_exception">脉搏数据解析异常</string>
    <string name="sv">每搏血量</string>
    <string name="co">心输出量</string>
    <string name="tpr">总周阻</string>
    <string name="ac">动脉顺应度</string>
    <string name="stype">启动方式</string>
    <string name="auto">自动</string>
    <string name="manual">手动</string>
    <string name="data_record">数据记录</string>
    <string name="detailed_info">详细信息</string>
    <string name="name">姓名</string>
    <string name="password">密码</string>
    <string name="national">民族</string>
    <string name="sex">性别</string>
    <string name="birthday">出生日期</string>
    <string name="education">教育</string>
    <string name="is_married">婚姻</string>
    <string name="is_work">工作状况</string>
    <string name="professional">职业</string>
    <string name="id_type">证件类型</string>
    <string name="id_number">证件编号</string>
    <string name="insurance_id">社保号</string>
    <string name="ID_card">身份证</string>
    <string name="email">电子邮箱</string>
    <string name="blood_type">血型</string>
    <string name="ps">收缩压</string>
    <string name="pd">舒张压</string>
    <string name="pr">脉搏</string>
    <string name="waist">腰围</string>
    <string name="address">地址</string>
    <string name="myemail">邮箱</string>
    <string name="phone">电话</string>
    <string name="myphone">手机</string>
    <string name="company">公司</string>
    <string name="mobilephone">移动电话</string>
    <string name="otherphone">其他电话</string>
    <string name="myqq">QQ号码</string>
    <string name="postcode">邮政编码</string>
    <string name="personal_ill_history">个人病史</string>
    <string name="infection_history">传染病史</string>
    <string name="psychosis_history">精神病史</string>
    <string name="tumour">肿瘤</string>
    <string name="operated">手术</string>
    <string name="injury">重大外伤</string>
    <string name="transfusion">输血</string>
    <string name="heritable_disease">遗传病史</string>
    <string name="orther">其他</string>
    <string name="ps_input_hint">请输入正常的收缩压范围（90-180）</string>
    <string name="pd_input_hint">请输入正常的舒张压范围(60-100)</string>
    <string name="pb_input_hint">请确认收缩压高于舒张压</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="not_null">此信息不能为空</string>
    <string name="show_date">没有更多数据可以显示了</string>
    <string name="health_state_ins">您当前经过健康评估</string>
    <string name="health_on">正处于</string>
    <string name="health_state">健康状态</string>
    <string name="network_exception">网络不给力啊！</string>
    <string name="other_exception">网络不给力</string>
    <string name="complete_info">请填写完整信息</string>
    <string name="network_is_not_connected">当前没有网络连接</string>
    <string name="duv_title">有最新的软件包，请下载！</string>
    <string name="data_ana_exception">数据解析异常</string>
    <string name="no_data">没有数据</string>
    <string name="change_password">&#160;&#160;修改密码</string>
    <string name="original_password_tv">&#160;&#160;原始密码</string>
    <string name="original_password_edt">请输入您的原始密码</string>
    <string name="new_password_tv">&#160;&#160;新密码&#160;&#160;&#160;&#160;</string>
    <string name="new_password_edt">请输入您的新密码</string>
    <string name="new_password_again_tv">&#160;&#160;密码确认</string>
    <string name="new_password_again_edt">请再一次输入您的新密码</string>
    <string name="ok_to_change_tv">确认修改</string>
    <string name="op_is_wrong">原始密码错误！</string>
    <string name="np_do_no_same">两次输入密码不一致！</string>
    <string name="message_is_wrong">信息填写有误，请重新输入！</string>
    <string name="message_is_empty">您有尚未填写的内容！</string>
    <string name="password_cell_phone">密保手机</string>
    <string name="reset_password">密码重新设置</string>
    <string name="activition">激活</string>
    <string name="user_feedback">用户反馈</string>
    <string name="user_feedback_hint">请填写您遇到的问题或您想反馈的内容！</string>
    <string name="about_company">关于我们</string>
    <string name="quit_account">退出当前账号</string>
    <string name="submit">提交</string>
    <string name="personal_information">个人信息</string>
    <string name="pluse">心率</string>
    <string name="ft">华氏温度值</string>
    <string name="ct">摄氏温度值</string>
    <string name="bo">血氧</string>
    <string name="register_success">恭喜,您已成功注册!</string>
    <string name="register_sucess_hint">请务必提交您的医生资质等相关资料以供审核，谢谢您的配合。</string>
    <string name="register_sucess_btn">提交资料</string>
    <string name="community_type">社保类别</string>
    <string name="community_number">编号</string>
    <string name="native_place">籍贯</string>
    <string name="source">来源</string>
    <string name="current_data">当前数据</string>
    <string name="reference_range">参考范围</string>
</resources>