<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/gray_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jxj.jwotchhelper.page.thirdData.FragmentThirdDataBt">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:padding="10dp"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/test_time"
        android:textColor="@color/third_data_lv_head_tc"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ft"
        android:textColor="@color/third_data_lv_head_tc"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ct"
        android:textColor="@color/third_data_lv_head_tc"
        />
</LinearLayout>
    <ListView
        android:id="@+id/third_data_bt_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
