<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray_bg"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:textColor="@color/gray"
            android:padding="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="杨健"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/ID_card"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="130536465646"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_psex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="男"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/community_type"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pcommunity_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="社保"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/community_number"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="001-012-0141"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/national"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pnational"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="汉"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_peducation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="大学"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pbirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1947-07-23"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/professional"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pprofessional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="杨健"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/native_place"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pnative_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="天津"
                android:layout_margin="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="1dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/is_married"
                android:layout_margin="10dp"
                />

            <TextView
                android:id="@+id/community_pmarita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="杨健"
                android:layout_margin="10dp"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
